<resources>
    <string name="app_name">s</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create your account</string>
    <string name="todo1">TODO</string>
    <string name="or_signin_with">Or Signin with</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="login">Login</string>
    <string name="new_create_account">New ? Create Account</string>
    <string name="todo3">TODO</string>
    <string name="button">Button</string>
    <string name="todo4">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo0">TODO</string>
    <string name="product_finder">PRODUCT FINDER</string>
    <string name="voice_activated_shopping">Voice-activated shopping</string>
    <string name="virtual_shoppong_carts">Virtual Shoppong Carts</string>
    <string name="inventory_management">Inventory Management</string>
    <string name="personalized_reccommendations">Personalized Reccommendations</string>
    <string name="in_share_navigation">In-Share Navigation</string>
    <string name="todo5">TODO</string>
    <string name="_3">3</string>
    <string name="todo12">TODO</string>
    <string name="perfume">Perfume</string>
    <string name="todo13">TODO</string>
    <string name="find_product">Find Product</string>
    <string name="todo14">TODO</string>
    <string name="empowering_your_shopping">Empowering your Shopping</string>
    <string name="experince_with">Experince With</string>
    <string name="powered_smart_retail">Powered Smart Retail</string>
    <string name="assistant">Assistant</string>
    <string name="intelligence_welcome">Intelligence: Welcome</string>
    <string name="shopbot">SHOPBOT</string>
    <string name="your_cart">Your Cart</string>
    <string name="order_history">Order History</string>
    <string name="live">Live</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="internet">Internet</string>
</resources>