<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<ScrollView
		android:id="@+id/vscroll1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:ignore="UselessParent">
		<LinearLayout
			android:id="@+id/linear1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:background="#FFFFFF"
			android:gravity="center_horizontal"
			android:orientation="vertical">
			<ImageView
				android:id="@+id/imageview1"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginTop="50dp"
				android:src="@drawable/cart"
				android:scaleType="fitCenter"
				android:contentDescription="@string/todo" />
			<TextView
				android:id="@+id/textview1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:padding="8dp"
				android:text="@string/create_your_account"
				android:textSize="14sp"
				android:textColor="#000000" />

			<EditText
				android:id="@+id/edittext1"
				android:layout_width="220dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="40dp"
				android:autofillHints=""
				android:drawableStart="@drawable/ic_person_black"
				android:hint="@string/name"
				android:imeOptions="actionNext"
				android:inputType="textPersonName"
				android:minHeight="48dp"
				android:padding="8dp"
				android:singleLine="true"
				android:textColor="#000000"
				android:textColorHint="#607D8B"
				android:textSize="14sp"
				android:textStyle="bold" />

			<EditText
				android:id="@+id/edittext2"
				android:layout_width="220dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:autofillHints=""
				android:drawableStart="@drawable/ic_email_black"
				android:hint="@string/email"
				android:imeOptions="actionNext"
				android:inputType="textEmailAddress"
				android:minHeight="48dp"
				android:padding="8dp"
				android:singleLine="true"
				android:textColor="#000000"
				android:textColorHint="#607D8B"
				android:textSize="14sp"
				android:textStyle="bold" />

			<EditText
				android:id="@+id/edittext3"
				android:layout_width="220dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:drawableStart="@drawable/ic_vpn_key_black"
				android:hint="@string/password"
				android:imeOptions="actionNext"
				android:inputType="textPassword"
				android:minHeight="48dp"
				android:padding="8dp"
				android:singleLine="true"
				android:textColor="#000000"
				android:textColorHint="#607D8B"
				android:textSize="14sp"
				android:textStyle="bold"
				android:autofillHints="" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/materialbutton1"
				style="@style/Widget.MaterialComponents.Button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="40dp"
				android:gravity="center_horizontal|center_vertical"
				android:padding="8dp"
				android:text="@string/sign_up"
				android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
				android:textColor="#616161"
				android:textSize="14sp"
				app:backgroundTint="@color/colorrimary"
				app:cornerRadius="100dp" />
			<TextView
				android:id="@+id/textview2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:padding="8dp"
				android:text="@string/or_signin_with"
				android:textSize="14sp"
				android:textColor="#000000" />
			<ImageView
				android:id="@+id/imageview2"
				android:layout_width="35dp"
				android:layout_height="35dp"
				android:layout_marginTop="25dp"
				android:src="@drawable/google_logo"
				android:scaleType="fitCenter"
				android:contentDescription="@string/todo1" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>

