<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical">



	<ScrollView
		android:id="@+id/vscroll1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:ignore="UselessParent">
		<LinearLayout
			android:id="@+id/linear1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:background="#FFFFFF"
			android:gravity="center_horizontal"
			android:orientation="vertical">
			<ImageView
				android:id="@+id/imageview1"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginTop="50dp"
				android:src="@drawable/cart"
				android:scaleType="fitCenter"
				android:contentDescription="@string/todo3" />

			<EditText
				android:id="@+id/edittext1"
				android:layout_width="190dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="100dp"
				android:drawableStart="@drawable/ic_email_black"
				android:hint="@string/email1"
				android:imeOptions="actionNext"
				android:inputType="textEmailAddress"
				android:minHeight="48dp"
				android:padding="8dp"
				android:singleLine="true"
				android:textColor="#000000"
				android:textColorHint="#607D8B"
				android:textSize="14sp"
				android:textStyle="bold"
				android:autofillHints="" />

			<EditText
				android:id="@+id/edittext2"
				android:layout_width="190dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:drawableStart="@drawable/ic_vpn_key_black"
				android:hint="@string/password1"
				android:imeOptions="actionDone"
				android:inputType="textPassword"
				android:minHeight="48dp"
				android:padding="8dp"
				android:singleLine="true"
				android:textColor="#000000"
				android:textColorHint="#607D8B"
				android:textSize="14sp"
				android:textStyle="bold"
				android:autofillHints="" />

			<Button
				android:id="@+id/button"
				android:layout_width="157dp"
				android:layout_height="wrap_content"
				android:text="@string/button" />

			<TextView
				android:id="@+id/textview1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="60dp"
				android:padding="8dp"
				android:text="@string/new_create_account"
				android:textSize="14sp"
				android:textColor="#000000" />

		</LinearLayout>
	</ScrollView>
</LinearLayout>