<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<androidx.cardview.widget.CardView
		android:id="@+id/cardview1"
		android:layout_width="match_parent"
		android:layout_height="100dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginBottom="20dp"
		android:background="#F6F6F6"
		android:orientation="vertical"
		app:cardElevation="5dp"
		app:cardCornerRadius="16dp">
		<LinearLayout
			android:id="@+id/linear1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="8dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="horizontal"
			android:background="?android:attr/selectableItemBackground"
			android:clickable="true"
			android:baselineAligned="false"
			android:focusable="true">
			<LinearLayout
				android:id="@+id/linear2"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="vertical">
				<ImageView
					android:id="@+id/product_icon"
					android:focusable="false"
					android:layout_width="60dp"
					android:layout_height="wrap_content"
					android:src="@drawable/perfume"
					android:scaleType="fitCenter"
					android:contentDescription="@string/todo12" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear3"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="vertical"
				android:layout_weight="1">
				<TextView
					android:id="@+id/product_name"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="20dp"
					android:padding="8dp"
					android:text="@string/perfume"
					android:textSize="16sp"
					android:textStyle="bold"
					android:textColor="#000000" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear4"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="vertical">
				<TextView
					android:id="@+id/product_count"
					android:focusable="false"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/_3"
					android:textSize="16sp"
					android:textStyle="bold"
					android:textColor="#000000" />
			</LinearLayout>
		</LinearLayout>
	</androidx.cardview.widget.CardView>
</LinearLayout>

