<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/linear8"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:background="#FFFFFF"
		android:gravity="center_horizontal|center_vertical"
		android:orientation="vertical"
		android:layout_weight="1"
		tools:ignore="UselessParent">
		<androidx.cardview.widget.CardView
			android:id="@+id/cardview1"
			android:layout_width="330dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="65dp"
			android:background="#F6F6F6"
			android:orientation="vertical"
			app:cardElevation="1dp"
			app:cardCornerRadius="16dp">
			<LinearLayout
				android:id="@+id/linear10"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:background="#F6F6F6"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal">

				<ImageView
					android:id="@+id/search_icon"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="?android:attr/selectableItemBackground"
					android:clickable="true"
					android:contentDescription="@string/_3"
					android:scaleType="center"
					android:src="@drawable/ic_search_black"
					tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
					android:focusable="true" />

				<ImageView
					android:id="@+id/voice_icon"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="?android:attr/selectableItemBackground"
					android:clickable="true"
					android:contentDescription="@string/todo13"
					android:scaleType="center"
					android:src="@drawable/ic_mic_none_black"
					tools:ignore="TouchTargetSizeCheck"
					android:focusable="true" />

				<MultiAutoCompleteTextView
					android:id="@+id/multiautocomplete1"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="@null"
					android:ellipsize="end"
					android:gravity="center_horizontal|center_vertical"
					android:hint="@string/find_product"
					android:minHeight="48dp"
					android:padding="8dp"
					android:singleLine="true"
					android:textColor="#000000"
					android:textColorHint="#607D8B"
					android:textSize="14sp"
					android:textStyle="bold" />

				<ImageView
					android:id="@+id/camera_icon"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="?android:attr/selectableItemBackground"
					android:clickable="true"
					android:contentDescription="@string/_3"
					android:scaleType="center"
					android:src="@drawable/ic_photo_camera_black"
					tools:ignore="TouchTargetSizeCheck"
					android:focusable="true" />
			</LinearLayout>
		</androidx.cardview.widget.CardView>
		<ListView
			android:id="@+id/listview1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingTop="8dp"
			android:dividerHeight="0dp"
			android:divider="@null"
			android:choiceMode="none"
			android:drawSelectorOnTop="false" />
	</LinearLayout>
</LinearLayout>

